<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_main"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping_mall_app"
        android:background="@android:color/holo_blue_light"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_of_list"
        android:textSize="25sp"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details"
        android:textSize="20sp"
        android:padding="20dp"
        android:id="@+id/textViewDetail"
        android:layout_margin="20dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/textViewTotal"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:textColor="@android:color/holo_red_dark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_n_n_visit_again_n_n"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:padding="20dp"
        android:textStyle="italic|bold"
        android:textColor="@android:color/black"/>

</LinearLayout>